tdf#166503 sw mso-compat layout: don't consolidate if PAGE_SPACE_MAX

For a few decades, Microsoft has been consolidating the top/bottom
spacing of adjacent paragraphs. But there does exist a layout flag
to not do that.

In my recent 25.2.3 changes to attempt to match MS layout,
that flag (which we already import) wasn't taken into account.

make CppunitTest_sw_ww8export4 CPPUNIT_TEST_NAME=testTdf166503

Change-Id: Ia7842398a4095a8c39753a594214b13ef724969d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185331
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>